--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="app"></div>
+    <div class="app app--position"></div>
     <script src = "main.js" type = "module"></script>
 </body>
 </html>
